fix: overlap issue (#1876)
issue #1870

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -72,7 +72,7 @@
   }
 }
 .q-position-engine {
-  z-index: 99998;
+  z-index: 5999;
 }
 
 .tabContent {
